--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,19 @@
 .project
 .classpath
 
+build/
+.gradle
+.vaadin-node-tasks.lock
+.npmrc
+*.sqlite
+
 *.iml
 .DS_Store
 
 # The following files are generated/updated by vaadin-maven-plugin
 node_modules/
 src/main/frontend/generated/
+src/main/frontend/index.html
 pnpmfile.js
 vite.generated.ts
 
